module(
    name = "onyx",
    version = "1.0",
)

############################## Python ##############################
bazel_dep(name = "rules_python", version = "1.3.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11")

python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)
use_repo(python, "python_3_10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//bazel/python/requirements:requirements_lock_3_11.txt",
)
use_repo(pip, "pip")

pip.parse(
    hub_name = "pip_3_10",
    python_version = "3.10",
    requirements_lock = "//bazel/python/requirements:requirements_lock_3_10.txt",
)
use_repo(pip, "pip_3_10")
############################## End Python ##############################
